Adding number display
Adding number display to the web page for bot rand and this fizzbuzz

--- a/templates/fizz_buzz_rand.html.twig
+++ b/templates/fizz_buzz_rand.html.twig
@@ -4,6 +4,6 @@
         <title>FizzBuzz Randomly!</title>
     </head>
     <body>
-        <p>{{str}}</p>
+        <p>{{nb}} : {{str}}</p>
     </body>
 </html>
