--- a/templates/fizz_buzz_this.html.twig
+++ b/templates/fizz_buzz_this.html.twig
@@ -4,6 +4,6 @@
         <title>FizzBuzz This !</title>
     </head>
     <body>
-        <p>{{str}}</p>
+        <p>{{nb}} : {{str}}</p>
     </body>
 </html>
